@@ -14,6 +14,7 @@ Build-Depends:
  debhelper (>= 7),
  dpkg-dev (>= 1.13.19),
  dpatch,
+ dh-ocaml (>= 0.2),
  ocaml-nox,
  ocaml-best-compilers,
  camlp5,
